Sat Mar 11 11:19:05 2000  Brian Gough  <bjg@network-theory.co.uk>

	* init_source.c (FUNCTION): added gsl_matrix_identity to set a
 	matrix to the identity, and gsl_matrix_zero for zeroing a matrix

	* gsl_matrix.h: renamed struct element dim2 to tda (trailing
 	dimension) following blas conventions for row-major matrices

Thu Dec  2 21:17:16 1999  Brian Gough  <bjg@network-theory.co.uk>

	* rowcol_source.c (FUNCTION): added gsl_matrix_view_from_vector
 	(Thanks to Fabrice Rossi)

Sun Oct 31 20:01:39 1999  Brian Gough  <bjg@network-theory.co.uk>

	* copy.c copy_source.c: added gsl_matrix_copy function

Tue Oct 19 14:13:35 1999  Brian Gough  <bjg@network-theory.co.uk>

	* added gsl_matrix_swap_row/col to exchange rows and columns

Fri Oct  1 15:48:07 1999  Brian Gough  <bjg@network-theory.co.uk>

	* the matrix struct now supports a separate 'trailing dimension'
 	to allow handling of submatrices

	* now uses separate block directory for memory management

Mon Mar  1 20:05:52 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* rowcol_source.c: fix rowcol to use strides

1998-11-09    <bjg@ancho.lanl.gov>

	* test_source.c, test_complex_source.c: use macros to determine if
	we should run tests with long double printf/scanf, since these
	aren't supported on all platforms

Mon Apr  6 15:06:38 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* make range checking the default, you have to define
 	GSL_RANGE_CHECK_OFF to turn it off
