@@ -59,6 +59,7 @@ void gsl_matrix_complex_free (gsl_matrix_complex * m);
 
 void gsl_matrix_complex_set_zero (gsl_matrix_complex * m);
 void gsl_matrix_complex_set_identity (gsl_matrix_complex * m);
+void gsl_matrix_complex_set_all (gsl_matrix_complex * m, gsl_complex x);
 
 gsl_complex * gsl_matrix_complex_ptr(const gsl_matrix_complex * m, size_t i, size_t j);
 gsl_complex gsl_matrix_complex_get(const gsl_matrix_complex * m, size_t i, size_t j);
