@@ -55,6 +55,7 @@ void gsl_matrix_float_free (gsl_matrix_float * m);
 
 void gsl_matrix_float_set_zero (gsl_matrix_float * m);
 void gsl_matrix_float_set_identity (gsl_matrix_float * m);
+void gsl_matrix_float_set_all (gsl_matrix_float * m, float x);
 
 float * gsl_matrix_float_ptr(const gsl_matrix_float * m, size_t i, size_t j);
 float   gsl_matrix_float_get(const gsl_matrix_float * m, size_t i, size_t j);
