@@ -55,6 +55,7 @@ void gsl_matrix_long_free (gsl_matrix_long * m);
 
 void gsl_matrix_long_set_zero (gsl_matrix_long * m);
 void gsl_matrix_long_set_identity (gsl_matrix_long * m);
+void gsl_matrix_long_set_all (gsl_matrix_long * m, long x);
 
 long * gsl_matrix_long_ptr(const gsl_matrix_long * m, size_t i, size_t j);
 long   gsl_matrix_long_get(const gsl_matrix_long * m, size_t i, size_t j);
