@@ -55,6 +55,7 @@ void gsl_matrix_short_free (gsl_matrix_short * m);
 
 void gsl_matrix_short_set_zero (gsl_matrix_short * m);
 void gsl_matrix_short_set_identity (gsl_matrix_short * m);
+void gsl_matrix_short_set_all (gsl_matrix_short * m, short x);
 
 short * gsl_matrix_short_ptr(const gsl_matrix_short * m, size_t i, size_t j);
 short   gsl_matrix_short_get(const gsl_matrix_short * m, size_t i, size_t j);
