@@ -55,6 +55,7 @@ void gsl_matrix_uint_free (gsl_matrix_uint * m);
 
 void gsl_matrix_uint_set_zero (gsl_matrix_uint * m);
 void gsl_matrix_uint_set_identity (gsl_matrix_uint * m);
+void gsl_matrix_uint_set_all (gsl_matrix_uint * m, unsigned int x);
 
 unsigned int * gsl_matrix_uint_ptr(const gsl_matrix_uint * m, size_t i, size_t j);
 unsigned int   gsl_matrix_uint_get(const gsl_matrix_uint * m, size_t i, size_t j);
