@@ -59,6 +59,7 @@ gsl_vector_complex_float_get (const gsl_vector_complex_float * v, size_t i);
 void gsl_vector_complex_float_set (gsl_vector_complex_float * v, size_t i,
                                    gsl_complex_float z);
 
+void gsl_vector_complex_float_set_zero (gsl_vector_complex_float * v);
 void gsl_vector_complex_float_set_all (gsl_vector_complex_float * v,
                                        gsl_complex_float z);
 
