@@ -50,6 +50,7 @@ double *gsl_vector_ptr (const gsl_vector * v, const size_t i);
 double gsl_vector_get (const gsl_vector * v, const size_t i);
 void gsl_vector_set (gsl_vector * v, const size_t i, double x);
 
+void gsl_vector_set_zero (gsl_vector * v);
 void gsl_vector_set_all (gsl_vector * v, double x);
 
 int gsl_vector_fread (FILE * stream, gsl_vector * v);
