@@ -50,6 +50,7 @@ unsigned int *gsl_vector_uint_ptr (const gsl_vector_uint * v, const size_t i);
 unsigned int gsl_vector_uint_get (const gsl_vector_uint * v, const size_t i);
 void gsl_vector_uint_set (gsl_vector_uint * v, const size_t i, unsigned int x);
 
+void gsl_vector_uint_set_zero (gsl_vector_uint * v);
 void gsl_vector_uint_set_all (gsl_vector_uint * v, unsigned int x);
 
 int gsl_vector_uint_fread (FILE * stream, gsl_vector_uint * v);
