@@ -50,6 +50,7 @@ unsigned long *gsl_vector_ulong_ptr (const gsl_vector_ulong * v, const size_t i)
 unsigned long gsl_vector_ulong_get (const gsl_vector_ulong * v, const size_t i);
 void gsl_vector_ulong_set (gsl_vector_ulong * v, const size_t i, unsigned long x);
 
+void gsl_vector_ulong_set_zero (gsl_vector_ulong * v);
 void gsl_vector_ulong_set_all (gsl_vector_ulong * v, unsigned long x);
 
 int gsl_vector_ulong_fread (FILE * stream, gsl_vector_ulong * v);
