@@ -31,18 +31,3 @@ FUNCTION (gsl_vector, set) (TYPE (gsl_vector) * v, const size_t i, BASE x)
   *(BASE *) (v->data + MULTIPLICITY * i * v->stride) = x;
 }
 
-void
-FUNCTION (gsl_vector, set_all) (TYPE (gsl_vector) * v, BASE x)
-{
-  ATOMIC * const data = v->data;
-  const size_t n = v->size;
-  const size_t stride = v->stride;
-
-  size_t i;
-
-  for (i = 0; i < n; i++)
-    {
-      *(BASE *) (data + MULTIPLICITY * i * stride) = x;
-    }
-}
-
